Enable different log level for testing, implement tests on titles